lets just make this static web pages im done

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 					<!-- Banner -->
 						<section id="banner">
 							<div class="inner">
-								<h1>Hey, I'm Snapshot</h1>
-								<p>A fully responsive gallery template by <a href="https://templated.co">TEMPLATED</a></p>
+								<h1>Hey, I'm Katelyn</h1>
+								<p>Welcome to my portfolio</p>
 								<ul class="actions">
 									<li><a href="#galleries" class="button alt scrolly big">Continue</a></li>
 								</ul>
@@ -47,16 +47,16 @@
 									</header>
 									<div class="content">
 										<div class="media">
-											<a href="images/fulls/01.jpg"><img src="images/thumbs/01.jpg" alt="" title="This right here is a caption." /></a>
+											<a href="images/media/dia_icon.png"><img src="images/media/dia_icon.png" alt="" title="Kurosawa Dia. (Halloween)" /></a>
 										</div>
 										<div class="media">
-											<a href="images/fulls/05.jpg"><img src="images/thumbs/05.jpg" alt="" title="This right here is a caption." /></a>
+											<a href="images/media/umi_and_sayo.png"><img src="images/media/umi_and_sayo.png" alt="" title="This right here is a caption." /></a>
 										</div>
-										<div class="media">
-											<a href="images/fulls/09.jpg"><img src="images/thumbs/09.jpg" alt="" title="This right here is a caption." /></a>
+										<div class="media squareimage">
+											<a href="images/media/janna.png"><img src="images/media/janna.png" alt="" title="Sacred Sword Janna - Watercolor." /></a>
 										</div>
-										<div class="media">
-											<a href="images/fulls/02.jpg"><img src="images/thumbs/02.jpg" alt="" title="This right here is a caption." /></a>
+										<div class="media squareimage">
+											<a href="images/media/caeldori.png"><img src="images/media/caeldori.png" alt="" title="Caeldori - Fall." /></a>
 										</div>
 										<div class="media">
 											<a href="images/fulls/06.jpg"><img src="images/thumbs/06.jpg" alt="" title="This right here is a caption." /></a>
