--- a/gallery.html
+++ b/gallery.html
@@ -50,7 +50,7 @@
 
 										<div class="content">
 											<div class="media all people">
-												<a href="images/fulls/01.jpg"><img src="images/thumbs/01.jpg" alt="" title="This right here is a caption." /></a>
+												<a href="images/media/umi_and_sayo.png"><img src="images/media/umi_and_sayo.png" alt="" title="This right here is a caption." /></a>
 											</div>
 											<div class="media all place">
 												<a href="images/fulls/05.jpg"><img src="images/thumbs/05.jpg" alt="" title="This right here is a caption." /></a>
