add more stuff, finish this preview page

--- a/index.html
+++ b/index.html
@@ -50,25 +50,25 @@
 											<a href="images/media/dia_icon.png"><img src="images/media/dia_icon.png" alt="" title="Kurosawa Dia. (Halloween)" /></a>
 										</div>
 										<div class="media">
-											<a href="images/media/umi_and_sayo.png"><img src="images/media/umi_and_sayo.png" alt="" title="This right here is a caption." /></a>
+											<a href="images/media/umi_and_sayo.png"><img src="images/media/umi_and_sayo.png" alt="" title="A commission for an FB page." /></a>
 										</div>
-										<div class="media squareimage">
-											<a href="images/media/janna.png"><img src="images/media/janna.png" alt="" title="Sacred Sword Janna - Watercolor." /></a>
-										</div>
-										<div class="media squareimage">
+										<div class="media">
 											<a href="images/media/caeldori.png"><img src="images/media/caeldori.png" alt="" title="Caeldori - Fall." /></a>
 										</div>
 										<div class="media">
-											<a href="images/fulls/06.jpg"><img src="images/thumbs/06.jpg" alt="" title="This right here is a caption." /></a>
+											<a href="images/media/dva.png"><img src="images/media/dva.png" alt="" title="D.VA wallpaper." /></a>
 										</div>
 										<div class="media">
-											<a href="images/fulls/10.jpg"><img src="images/thumbs/10.jpg" alt="" title="This right here is a caption." /></a>
+											<a href="images/media/irelia.png"><img src="images/media/irelia.png" alt="" title="Irelia twitter header." /></a>
 										</div>
 										<div class="media">
-											<a href="images/fulls/03.jpg"><img src="images/thumbs/03.jpg" alt="" title="This right here is a caption." /></a>
+											<a href="images/media/janna.png"><img src="images/media/janna.png" alt="" title="Sacred Sword Janna - Watercolor." /></a>
 										</div>
 										<div class="media">
-											<a href="images/fulls/07.jpg"><img src="images/thumbs/07.jpg" alt="" title="This right here is a caption." /></a>
+											<a href="images/media/darkstar_ori.png"><img src="images/media/darkstar_ori.png" alt="" title="Dark Star Orianna Header." /></a>
+										</div>
+										<div class="media">
+											<a href="images/media/project_vayne.png"><img src="images/media/project_vayne.png" alt="" title="Project Vayne Synthwave." /></a>
 										</div>
 									</div>
 									<footer>
@@ -86,8 +86,8 @@
 									<p>Aliquet dolor ultricies sem rhoncus dolor ullamcorper pharetra dis condimentum ullamcorper rutrum vehicula id nisi vel aptent orci litora hendrerit penatibus erat ad sit. In a semper velit eleifend a viverra adipiscing a phasellus urna praesent parturient integer ultrices montes parturient suscipit posuere quis aenean. Parturient euismod ultricies commodo arcu elementum suspendisse id dictumst at ut vestibulum conubia quisque a himenaeos dictum proin dis purus integer mollis parturient eros scelerisque dis libero parturient magnis.</p>
 									<h3>Follow Me</h3>
 									<ul class="icons">
-										<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+										<li><a href="https://twitter.com/StardustRiko" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="https://www.facebook.com/Stardust-Graphics-185742538771488/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 										<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 									</ul>
 								</div>
@@ -118,9 +118,7 @@
 
 					<!-- Footer -->
 						<footer id="footer">
-							<div class="copyright">
-								&copy; Untitled Design: <a href="https://templated.co/">TEMPLATED</a>. Images: <a href="https://unsplash.com/">Unsplash</a>.
-							</div>
+								<p>Website constructed by <a href="http://github.com/EternalLiquet/">EternalLiquet</a></p>
 						</footer>
 				</section>
 		</div>
