--- a/index.html
+++ b/index.html
@@ -118,7 +118,9 @@
 
 					<!-- Footer -->
 						<footer id="footer">
+							<div class="author">
 								<p>Website constructed by <a href="http://github.com/EternalLiquet/">EternalLiquet</a></p>
+							</div>
 						</footer>
 				</section>
 		</div>
